fixed projects spacing mobile

--- a/css/projects.css
+++ b/css/projects.css
@@ -57,6 +57,10 @@
         gap: 2rem;
         padding-bottom: 2rem;
         width: 100%;
+
+        @media (max-width: 1400px) {
+            padding-bottom: 4rem;
+        }
     }
 
     .projects-section__photo {
